modules/noosphere/taghmata/nixidy/manifests/prod/forgejo/Deployment-forgejo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/version: 15.0.9
    helm.sh/chart: forgejo-17.1.7
    version: 15.0.9
  name: forgejo
  namespace: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: forgejo
      app.kubernetes.io/name: forgejo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/config: 5fb88d2aea0e8777891dd9688ef97e221184621de10d6d13567aa33ce7cd48c8
        checksum/oauth_0: 1235cb8d117ff073769a438f8fde36b2d6934e6741e53db04212479b8a555022
      labels:
        app: forgejo
        app.kubernetes.io/instance: forgejo
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: forgejo
        app.kubernetes.io/version: 15.0.9
        helm.sh/chart: forgejo-17.1.7
        version: 15.0.9
    spec:
      containers:
        - env:
            - name: SSH_LISTEN_PORT
              value: "2222"
            - name: SSH_PORT
              value: "22"
            - name: GITEA_APP_INI
              value: /data/gitea/conf/app.ini
            - name: GITEA_CUSTOM
              value: /data/gitea
            - name: GITEA_WORK_DIR
              value: /data
            - name: GITEA_TEMP
              value: /tmp/gitea
            - name: TMPDIR
              value: /tmp/gitea
            - name: HOME
              value: /data/gitea/git
          image: code.forgejo.org/forgejo/forgejo:15.0.9-rootless
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 200
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          name: forgejo
          ports:
            - containerPort: 2222
              name: ssh
            - containerPort: 3000
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - SYS_CHROOT
              drop:
                - all
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /tmp
              name: temp
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 60
      volumes:
        - name: init
          secret:
            defaultMode: 110
            secretName: forgejo-init
        - name: config
          secret:
            defaultMode: 110
            secretName: forgejo
        - name: inline-config-sources
          secret:
            secretName: forgejo-inline-config
        - emptyDir: {}
          name: temp
        - name: data
          persistentVolumeClaim:
            claimName: gitea-shared-storage
