modules/noosphere/taghmata/nixidy/manifests/prod/forgejo/Service-forgejo-http.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/version: 15.0.8
    helm.sh/chart: forgejo-17.1.6
    version: 15.0.8
  name: forgejo-http
  namespace: forgejo
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
  type: ClusterIP
