modules/noosphere/taghmata/nixidy/manifests/prod/forgejo/Service-forgejo-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.io/allow-shared-ip: noosphere
    metallb.io/loadBalancerIPs: 192.168.1.251
  labels:
    app: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/version: 15.0.9
    helm.sh/chart: forgejo-17.1.7
    version: 15.0.9
  name: forgejo-ssh
  namespace: forgejo
spec:
  ports:
    - name: ssh
      port: 22
      protocol: TCP
      targetPort: ssh
  selector:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
  type: LoadBalancer
