modules/noosphere/taghmata/nixidy/manifests/prod/forgejo/Ingress-forgejo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    category: gitops
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: Git Forge
    glance/icon: di:forgejo
    glance/id: forgejo
    glance/name: Forgejo
    glance/parent: forgejo
    glance/url: https://forge.noosphere.uk
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
  labels:
    app: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/version: 15.0.9
    helm.sh/chart: forgejo-17.1.7
    version: 15.0.9
  name: forgejo
  namespace: forgejo
spec:
  ingressClassName: traefik
  rules:
    - host: forge.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: forgejo-http
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - forge.noosphere.uk
      secretName: forgejo-tls
