modules/noosphere/taghmata/nixidy/manifests/prod/forgejo/IngressRouteTCP-forgejo-ssh.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh
  namespace: forgejo
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`forge.noosphere.uk)
      services:
        - name: forgejo-ssh
          port: 22
